[package]
name = "IsJack_tool"
version = "0.1.0"
edition = "2021"

# Note: ratatui 0.30.0 requires Rust 1.85+ (edition2024). 
# Using 0.29.0 which is API-compatible and runs on Rust 1.74+
[dependencies]
ratatui = "0.29.0"
crossterm = "0.28"
serde_json = "1.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }